--- a/.github/workflows/cloudflare-pages.yml
+++ b/.github/workflows/cloudflare-pages.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-     # ここでビルド処理
+     # ここでビルド
       - name: Publish to Cloudflare Pages
         uses: cloudflare/pages-action@1
         with:
