--- a/.github/workflows/cloudflare-pages.yml
+++ b/.github/workflows/cloudflare-pages.yml
@@ -2,16 +2,26 @@ name: Cloudflare Pages
 
 on: [push]
 
+env:
+  CARGO_TERM_COLOR: always
+
 jobs:
   publish:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
+
     permissions:
       contents: read
       deployments: write
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-     # ここでビルド
+
+      - name: Build
+        - run: rustup target add wasm32-unknown-unknown
+        - run: cargo install trunk
+        - run: trunk build --release
+
       - name: Publish to Cloudflare Pages
         uses: cloudflare/pages-action@1
         with:
