--- a/.github/workflows/cloudflare-pages.yml
+++ b/.github/workflows/cloudflare-pages.yml
@@ -22,6 +22,8 @@ jobs:
           rustup target add wasm32-unknown-unknown
           cargo install trunk
           cargo build --release --target wasm32-unknown-unknown
+          wget https://github.com/dobicinaitis/tailwind-cli-extra/releases/download/v1.7.11/tailwindcss-extra-linux-x64
+          ./tailwindcss-extra-linux-x64 --input ./input.css -o ./tailwind.css --minify
           trunk build --release
 
       - name: Publish to Cloudflare Pages
