--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,6 @@ horrorshow = "0.8.4"
 
 [dependencies]
 stylist = { version = "0.13.0", features = ["yew_integration"] }
+web-sys = { version = "0.3.70", features = ["Window", "ScrollToOptions", "ScrollBehavior"] }
 yew = { version = "0.21.0", features = ["csr"] }
 yew-router = "0.18.0"
